Fixing the styles for the admin to have a min-height so it doesn't cut off prematurely.

--- a/admin/extend/admin/theme/admin/style/styles.css
+++ b/admin/extend/admin/theme/admin/style/styles.css
@@ -14,7 +14,7 @@
 */
 
 body {
-	background: #FFF;
+	background: #FFFFFF;
 	color: #333;
 	font: 11px/15px Century Gothic, Apple Gothic, sans-serif;
 }
@@ -200,8 +200,9 @@ ul, ol {
 	Structure
 */
 .container-outer {
-	background: -webkit-gradient(linear, 0% 0, 0% 750, from(#0083C1), to(#FFFFFF), color-stop(.13,#0b5f8b),color-stop(.13,#ced9df));
-	background: -moz-linear-gradient(0px 750px 90deg,#FFFFFF, #FFFFFF, #CED9DF 87%, #0b5f8b 87%, #0083C1 100%);
+	background: -webkit-gradient(linear, 0% 0, 0% 350, from(#0083C1), to(#FFFFFF), color-stop(.13,#0b5f8b),color-stop(.13,#ced9df));
+	background: -moz-linear-gradient(0px 350px 90deg,#FFFFFF, #FFFFFF, #CED9DF 87%, #0b5f8b 87%, #0083C1 100%);
+	min-height: 350px;
 }
 
 .container_12,
